load("@rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:resolve go github.com/onehumancorp/mono/srcs/proto/ohc/orchestration //srcs/proto:hub_go_proto

go_library(
    name = "orchestration",
    srcs = [
        "auth_interceptor.go",
        "service.go",
    ],
    importpath = "github.com/onehumancorp/mono/srcs/orchestration",
    visibility = ["//visibility:public"],
    deps = [
        "//srcs/proto:hub_go_proto",
        "//srcs/telemetry",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//peer",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "orchestration_test",
    srcs = [
        "auth_interceptor_test.go",
        "benchmark_test.go",
        "minimax_client_test.go",
        "service_grpc_test.go",
        "service_test.go",
    ],
    embed = [":orchestration"],
    deps = [
        "//srcs/proto:hub_go_proto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//peer",
        "@org_golang_google_grpc//status",
    ],
)
