load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pipeline",
    srcs = ["pipeline.go"],
    importpath = "github.com/onehumancorp/mono/srcs/pipeline",
    visibility = ["//visibility:public"],
    deps = [
        "//srcs/orchestration",
        "//srcs/sip",
    ],
)

go_test(
    name = "pipeline_test",
    srcs = ["pipeline_test.go"],
    embed = [":pipeline"],
    deps = [
        "//srcs/orchestration",
        "//srcs/sip",
    ],
)
