load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@aspect_rules_js//js:defs.bzl", "js_library")

proto_library(
    name = "hub_proto",
    srcs = ["hub.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "hub_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/onehumancorp/mono/srcs/proto",
    protos = [":hub_proto"],
    visibility = ["//visibility:public"],
)

# Hermetic TS generation using @bufbuild/protoc-gen-es
genrule(
    name = "hub_ts_proto_gen",
    srcs = [
        "hub.proto",
    ],
    outs = ["hub_pb.ts"],
    cmd = """
        export PATH=$$PATH:$$(dirname $(location @nodejs//:node_bin)) && \
        ./$(location @protobuf//:protoc) \
        --plugin=protoc-gen-es=node_modules/.bin/protoc-gen-es \
        --es_out=$(RULEDIR) \
        --es_opt=target=ts \
        $(location hub.proto) && \
        find $(RULEDIR) -name "*hub_pb.ts" -exec mv {} $(RULEDIR)/hub_pb.ts \\;
    """,
    tools = [
        "@protobuf//:protoc",
        "@nodejs//:node_bin",
    ],
    tags = ["no-sandbox"],
)

js_library(
    name = "proto_types_ts",
    srcs = ["hub_pb.ts"],
    visibility = ["//visibility:public"],
)
