load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("//bazel/rules:proto_ts_library.bzl", "proto_ts_library")

proto_library(
    name = "hub_proto",
    srcs = ["hub.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "hub_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/onehumancorp/mono/srcs/proto",
    protos = [":hub_proto"],
    visibility = ["//visibility:public"],
)

proto_ts_library(
    name = "proto_types_ts",
    protos = ":hub_proto",
    visibility = ["//visibility:public"],
)
