load("@rules_proto//proto:defs.bzl", "proto_library")
load("//bazel/rules:proto_go_grpc_library.bzl", "proto_go_grpc_library")
load("//bazel/rules:proto_ts_library.bzl", "proto_ts_library")

proto_library(
    name = "hub_proto",
    srcs = ["hub.proto"],
    visibility = ["//visibility:public"],
)

proto_go_grpc_library(
    name = "hub_go_proto",
    protos = ":hub_proto",
    importpath = "github.com/onehumancorp/mono/srcs/proto",
    visibility = ["//visibility:public"],
)

proto_ts_library(
    name = "proto_types_ts",
    protos = ":hub_proto",
    visibility = ["//visibility:public"],
)
