load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "scheduler",
    srcs = ["scheduler.go"],
    importpath = "github.com/onehumancorp/mono/srcs/scheduler",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_uuid//:uuid"],
)

go_test(
    name = "scheduler_test",
    srcs = ["scheduler_test.go"],
    embed = [":scheduler"],
)
