load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sip",
    srcs = ["sip.go"],
    importpath = "github.com/onehumancorp/mono/srcs/sip",
    visibility = ["//visibility:public"],
    deps = [
        "@org_modernc_sqlite//:sqlite",
        "//srcs/proto:hub_go_proto",
    ],
)

go_test(
    name = "sip_test",
    srcs = ["sip_test.go"],
    embed = [":sip"],
    deps = ["//srcs/proto:hub_go_proto"],
)
